--- a/src/app/game-container/game-container.component.scss
+++ b/src/app/game-container/game-container.component.scss
@@ -57,7 +57,13 @@ img {
     max-height: 11rem;
     max-width: 19rem;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
 
+@media screen and (max-width: 730px) {
+    img {
+        max-height: 8rem;
+        max-width: 11.5rem;
+    }
 }
 
 .img {
