--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,8 +8,11 @@ a { text-decoration: none; color: rgb(0, 0, 0);}
     width: 100%;
 }
 
-#modalSubmitParent {
+.modalSubmitParent {
     justify-content: space-between;
+}
+.modalRemoveButtonParent {
+    justify-content: space-evenly;
 }
 
 #imgParent img {
